# idna_mapping

./: Cargo.toml  README.md
src/: lib.rs  make_uts46_mapping_table.py  uts46_mapping_table.rs
